--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+
+.vscode/
+
 # Logs
 logs
 *.log
@@ -137,3 +141,5 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+
